--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,5 +3,6 @@
 @import'partials/main';
 @import'partials/tablet';
 @import'partials/laptop';
+@import'partials/4k';
 @import'partials/hamb-icon';
 
