--- a/sass/partials/tablet.scss
+++ b/sass/partials/tablet.scss
@@ -79,7 +79,7 @@
         }
     }
     .contacto,.links,.recientes {
-        flex-basis:32%;
+        flex-basis:40%;
         padding-left:0;
         padding-right:0;
         padding-top:0;
@@ -176,15 +176,10 @@
         padding-top: em(50px);
         &__container {
             flex-direction: row;
+            justify-content: space-around;
         }
     }
-    .links {
-        display:flex;
-        border-right: 1px solid #888;
-        border-left: 1px solid #888;
-        margin-right: em(50px);
-        padding-left: em(50px);
-    }
+    
     .copyright {
         margin-top: em(50px);
     }
