--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,19 @@
+/*
+Theme Name: SolerVismara
+Theme URI: http://solervismara.com
+Author: Javier Pons
+Author URI: https://www.facebook.com/Ghipsio-111415540321377
+Description: Tema pensado para hacer muestra de inmuebles con buscador de acuerdo a las caracteristicas del inmueble
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: 
+Tags: Blue, light blue , white , flexbox , sass , scss
+Text Domain: SolerVismara
+
+This theme, like WordPress, is licensed under the GPL.
+Use it to make something cool, have fun, and share what you've learned with others.
+*/
 @import'partials/variables';
 @import'partials/reset';
 @import'partials/main';
