--- a/partials/laptop.css
+++ b/partials/laptop.css
@@ -53,80 +53,79 @@
  * 51  | |         }
  * 52  | |     }
  * 53  | |     .banner {
- * 54  | |         margin-top:0;
- * 55  | |         height:100vh;
- * 56  | |         &__info {
- * 57  | |             max-width:$container-width;
- * 58  | |         }
- * 59  | |         &__titulo {
- * 60  | |             padding:0;
- * 61  | |             font-size: em(18px);
- * 62  | |             max-width:75%;
- * 63  | |         }
- * 64  | |         &__descripcion {
- * 65  | |             font-size:em(9px);
- * 66  | |         }
- * 67  | |     }
- * 68  | |     .servicios {
- * 69  | |         &__contenedor {
- * 70  | |             justify-content: space-between;
- * 71  | |         }
- * 72  | |         &__elemento {
- * 73  | |             font-size:1.1em;
- * 74  | |             width:16.6%;
- * 75  | |             border:none;
- * 76  | |             border-radius:0;
- * 77  | |             border-right:1px solid white;
- * 78  | |             &--first {
- * 79  | |                 border-left:1px solid white;
- * 80  | |             }
- * 81  | |         }
- * 82  | |         &__link {
- * 83  | |             width:100%;
- * 84  | |         }
- * 85  | |     }
- * 86  | | 
- * 87  | |     .destacados {
- * 88  | |         padding:60px 0;
- * 89  | |         &__titulo-seccion {
- * 90  | |             font-size:em(21px);
- * 91  | |             padding-bottom:40px;
- * 92  | |             &::after {
- * 93  | |                 content:'';
- * 94  | |                 height:2px;
- * 95  | |                 width:5%;
- * 96  | |             }
- * 97  | |         }
- * 98  | |     }
- * 99  | |     .propiedad {
- * 100 | |         margin-bottom:em(30px);
- * 101 | |         height:em(160px);
- * 102 | |     }
- * 103 | |     .tasaciones {
- * 104 | |         &__titulo {
- * 105 | |             font-size: em(20px);
- * 106 | |         }
- * 107 | |         &__cta {
- * 108 | |             font-size: em(16px);
- * 109 | |         }
- * 110 | |     }
- * 111 | |     .links {
- * 112 | |         display:flex;
- * 113 | |         border-right: 1px solid #888;
- * 114 | |         border-left: 1px solid #888;
- * 115 | |         margin-right: em(50px);
- * 116 | |         padding-left: em(50px);
- * 117 | |     }
- * 118 | |     .contacto {
- * 119 | |         padding-left:0;
- * 120 | |         padding-right:0;
- * 121 | |     }
- * 122 | |     .propiedad-reciente {
- * 123 | |         &__contenido {
- * 124 | |             font-size: 0.95em;
- * 125 | |         }
- * 126 | |     }
- * 127 | \ }
+ * 54  | |         height:100vh;
+ * 55  | |         &__info {
+ * 56  | |             max-width:$container-width;
+ * 57  | |         }
+ * 58  | |         &__titulo {
+ * 59  | |             padding:0;
+ * 60  | |             font-size: em(18px);
+ * 61  | |             max-width:75%;
+ * 62  | |         }
+ * 63  | |         &__descripcion {
+ * 64  | |             font-size:em(9px);
+ * 65  | |         }
+ * 66  | |     }
+ * 67  | |     .servicios {
+ * 68  | |         &__contenedor {
+ * 69  | |             justify-content: space-between;
+ * 70  | |         }
+ * 71  | |         &__elemento {
+ * 72  | |             font-size:1.1em;
+ * 73  | |             width:16.6%;
+ * 74  | |             border:none;
+ * 75  | |             border-radius:0;
+ * 76  | |             border-right:1px solid white;
+ * 77  | |             &--first {
+ * 78  | |                 border-left:1px solid white;
+ * 79  | |             }
+ * 80  | |         }
+ * 81  | |         &__link {
+ * 82  | |             width:100%;
+ * 83  | |         }
+ * 84  | |     }
+ * 85  | | 
+ * 86  | |     .destacados {
+ * 87  | |         padding:60px 0;
+ * 88  | |         &__titulo-seccion {
+ * 89  | |             font-size:em(21px);
+ * 90  | |             padding-bottom:40px;
+ * 91  | |             &::after {
+ * 92  | |                 content:'';
+ * 93  | |                 height:2px;
+ * 94  | |                 width:5%;
+ * 95  | |             }
+ * 96  | |         }
+ * 97  | |     }
+ * 98  | |     .propiedad {
+ * 99  | |         margin-bottom:em(30px);
+ * 100 | |         height:em(160px);
+ * 101 | |     }
+ * 102 | |     .tasaciones {
+ * 103 | |         &__titulo {
+ * 104 | |             font-size: em(20px);
+ * 105 | |         }
+ * 106 | |         &__cta {
+ * 107 | |             font-size: em(16px);
+ * 108 | |         }
+ * 109 | |     }
+ * 110 | |     .links {
+ * 111 | |         display:flex;
+ * 112 | |         border-right: 1px solid #888;
+ * 113 | |         border-left: 1px solid #888;
+ * 114 | |         margin-right: em(50px);
+ * 115 | |         padding-left: em(50px);
+ * 116 | |     }
+ * 117 | |     .contacto {
+ * 118 | |         padding-left:0;
+ * 119 | |         padding-right:0;
+ * 120 | |     }
+ * 121 | |     .propiedad-reciente {
+ * 122 | |         &__contenido {
+ * 123 | |             font-size: 0.95em;
+ * 124 | |         }
+ * 125 | |     }
+ * 126 | \ }
  *     '
  *   sass/partials/laptop.scss 1:1  root stylesheet */
 
@@ -138,5 +137,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a     \2577 \a 1   \2502  \250c  @include mq('xl') {\a 2   \2502  \2502      // Cambiar tamaños en estas lineas\a 3   \2502  \2502      .buscador {\a 4   \2502  \2502          font-size:1.2em;\a 5   \2502  \2502      }\a 6   \2502  \2502      .destacados {\a 7   \2502  \2502          font-size: 1.15em;\a 8   \2502  \2502      }\a 9   \2502  \2502      .banner {\a 10  \2502  \2502          font-size: 2em;\a 11  \2502  \2502      }\a 12  \2502  \2502      .servicios {\a 13  \2502  \2502          font-size: 1.1em;\a 14  \2502  \2502      }\a 15  \2502  \2502      .top-header {\a 16  \2502  \2502          font-size:28px;\a 17  \2502  \2502      }\a 18  \2502  \2502      .main-header {\a 19  \2502  \2502          font-size:21px;\a 20  \2502  \2502      }\a 21  \2502  \2502      .tasaciones {\a 22  \2502  \2502          font-size: em(15px);\a 23  \2502  \2502      }\a 24  \2502  \2502      .contacto,.links,.recientes {\a 25  \2502  \2502          font-size: 1.15em;\a 26  \2502  \2502      }\a 27  \2502  \2502      .container {\a 28  \2502  \2502          // Espacio de dos lados del contenedor\a 29  \2502  \2502          //margin: 0 em(11px);\a 30  \2502  \2502          width:100%;\a 31  \2502  \2502          max-width:$container-width;\a 32  \2502  \2502          margin:0 auto;\a 33  \2502  \2502      }\a 34  \2502  \2502      .main-header {\a 35  \2502  \2502          font-weight:600;\a 36  \2502  \2502          background:$blanco;\a 37  \2502  \2502          height:auto;\a 38  \2502  \2502          -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 39  \2502  \2502          -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 40  \2502  \2502          box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 41  \2502  \2502          &__logo {\a 42  \2502  \2502              img {\a 43  \2502  \2502                  height:em(50px);\a 44  \2502  \2502                  margin: em(5px) 0 ;\a 45  \2502  \2502                  position:relative;\a 46  \2502  \2502                  transform:translateX(-7%);\a 47  \2502  \2502              }\a 48  \2502  \2502          }\a 49  \2502  \2502          &__container {\a 50  \2502  \2502              height:auto;\a 51  \2502  \2502          }\a 52  \2502  \2502      }\a 53  \2502  \2502      .banner {\a 54  \2502  \2502          margin-top:0;\a 55  \2502  \2502          height:100vh;\a 56  \2502  \2502          &__info {\a 57  \2502  \2502              max-width:$container-width;\a 58  \2502  \2502          }\a 59  \2502  \2502          &__titulo {\a 60  \2502  \2502              padding:0;\a 61  \2502  \2502              font-size: em(18px);\a 62  \2502  \2502              max-width:75%;\a 63  \2502  \2502          }\a 64  \2502  \2502          &__descripcion {\a 65  \2502  \2502              font-size:em(9px);\a 66  \2502  \2502          }\a 67  \2502  \2502      }\a 68  \2502  \2502      .servicios {\a 69  \2502  \2502          &__contenedor {\a 70  \2502  \2502              justify-content: space-between;\a 71  \2502  \2502          }\a 72  \2502  \2502          &__elemento {\a 73  \2502  \2502              font-size:1.1em;\a 74  \2502  \2502              width:16.6%;\a 75  \2502  \2502              border:none;\a 76  \2502  \2502              border-radius:0;\a 77  \2502  \2502              border-right:1px solid white;\a 78  \2502  \2502              &--first {\a 79  \2502  \2502                  border-left:1px solid white;\a 80  \2502  \2502              }\a 81  \2502  \2502          }\a 82  \2502  \2502          &__link {\a 83  \2502  \2502              width:100%;\a 84  \2502  \2502          }\a 85  \2502  \2502      }\a 86  \2502  \2502  \a 87  \2502  \2502      .destacados {\a 88  \2502  \2502          padding:60px 0;\a 89  \2502  \2502          &__titulo-seccion {\a 90  \2502  \2502              font-size:em(21px);\a 91  \2502  \2502              padding-bottom:40px;\a 92  \2502  \2502              &::after {\a 93  \2502  \2502                  content:'';\a 94  \2502  \2502                  height:2px;\a 95  \2502  \2502                  width:5%;\a 96  \2502  \2502              }\a 97  \2502  \2502          }\a 98  \2502  \2502      }\a 99  \2502  \2502      .propiedad {\a 100 \2502  \2502          margin-bottom:em(30px);\a 101 \2502  \2502          height:em(160px);\a 102 \2502  \2502      }\a 103 \2502  \2502      .tasaciones {\a 104 \2502  \2502          &__titulo {\a 105 \2502  \2502              font-size: em(20px);\a 106 \2502  \2502          }\a 107 \2502  \2502          &__cta {\a 108 \2502  \2502              font-size: em(16px);\a 109 \2502  \2502          }\a 110 \2502  \2502      }\a 111 \2502  \2502      .links {\a 112 \2502  \2502          display:flex;\a 113 \2502  \2502          border-right: 1px solid #888;\a 114 \2502  \2502          border-left: 1px solid #888;\a 115 \2502  \2502          margin-right: em(50px);\a 116 \2502  \2502          padding-left: em(50px);\a 117 \2502  \2502      }\a 118 \2502  \2502      .contacto {\a 119 \2502  \2502          padding-left:0;\a 120 \2502  \2502          padding-right:0;\a 121 \2502  \2502      }\a 122 \2502  \2502      .propiedad-reciente {\a 123 \2502  \2502          &__contenido {\a 124 \2502  \2502              font-size: 0.95em;\a 125 \2502  \2502          }\a 126 \2502  \2502      }\a 127 \2502  \2514  }\a     \2575 \a   sass/partials/laptop.scss 1:1  root stylesheet";
+  content: "Error: Undefined mixin.\a     \2577 \a 1   \2502  \250c  @include mq('xl') {\a 2   \2502  \2502      // Cambiar tamaños en estas lineas\a 3   \2502  \2502      .buscador {\a 4   \2502  \2502          font-size:1.2em;\a 5   \2502  \2502      }\a 6   \2502  \2502      .destacados {\a 7   \2502  \2502          font-size: 1.15em;\a 8   \2502  \2502      }\a 9   \2502  \2502      .banner {\a 10  \2502  \2502          font-size: 2em;\a 11  \2502  \2502      }\a 12  \2502  \2502      .servicios {\a 13  \2502  \2502          font-size: 1.1em;\a 14  \2502  \2502      }\a 15  \2502  \2502      .top-header {\a 16  \2502  \2502          font-size:28px;\a 17  \2502  \2502      }\a 18  \2502  \2502      .main-header {\a 19  \2502  \2502          font-size:21px;\a 20  \2502  \2502      }\a 21  \2502  \2502      .tasaciones {\a 22  \2502  \2502          font-size: em(15px);\a 23  \2502  \2502      }\a 24  \2502  \2502      .contacto,.links,.recientes {\a 25  \2502  \2502          font-size: 1.15em;\a 26  \2502  \2502      }\a 27  \2502  \2502      .container {\a 28  \2502  \2502          // Espacio de dos lados del contenedor\a 29  \2502  \2502          //margin: 0 em(11px);\a 30  \2502  \2502          width:100%;\a 31  \2502  \2502          max-width:$container-width;\a 32  \2502  \2502          margin:0 auto;\a 33  \2502  \2502      }\a 34  \2502  \2502      .main-header {\a 35  \2502  \2502          font-weight:600;\a 36  \2502  \2502          background:$blanco;\a 37  \2502  \2502          height:auto;\a 38  \2502  \2502          -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 39  \2502  \2502          -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 40  \2502  \2502          box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);\a 41  \2502  \2502          &__logo {\a 42  \2502  \2502              img {\a 43  \2502  \2502                  height:em(50px);\a 44  \2502  \2502                  margin: em(5px) 0 ;\a 45  \2502  \2502                  position:relative;\a 46  \2502  \2502                  transform:translateX(-7%);\a 47  \2502  \2502              }\a 48  \2502  \2502          }\a 49  \2502  \2502          &__container {\a 50  \2502  \2502              height:auto;\a 51  \2502  \2502          }\a 52  \2502  \2502      }\a 53  \2502  \2502      .banner {\a 54  \2502  \2502          height:100vh;\a 55  \2502  \2502          &__info {\a 56  \2502  \2502              max-width:$container-width;\a 57  \2502  \2502          }\a 58  \2502  \2502          &__titulo {\a 59  \2502  \2502              padding:0;\a 60  \2502  \2502              font-size: em(18px);\a 61  \2502  \2502              max-width:75%;\a 62  \2502  \2502          }\a 63  \2502  \2502          &__descripcion {\a 64  \2502  \2502              font-size:em(9px);\a 65  \2502  \2502          }\a 66  \2502  \2502      }\a 67  \2502  \2502      .servicios {\a 68  \2502  \2502          &__contenedor {\a 69  \2502  \2502              justify-content: space-between;\a 70  \2502  \2502          }\a 71  \2502  \2502          &__elemento {\a 72  \2502  \2502              font-size:1.1em;\a 73  \2502  \2502              width:16.6%;\a 74  \2502  \2502              border:none;\a 75  \2502  \2502              border-radius:0;\a 76  \2502  \2502              border-right:1px solid white;\a 77  \2502  \2502              &--first {\a 78  \2502  \2502                  border-left:1px solid white;\a 79  \2502  \2502              }\a 80  \2502  \2502          }\a 81  \2502  \2502          &__link {\a 82  \2502  \2502              width:100%;\a 83  \2502  \2502          }\a 84  \2502  \2502      }\a 85  \2502  \2502  \a 86  \2502  \2502      .destacados {\a 87  \2502  \2502          padding:60px 0;\a 88  \2502  \2502          &__titulo-seccion {\a 89  \2502  \2502              font-size:em(21px);\a 90  \2502  \2502              padding-bottom:40px;\a 91  \2502  \2502              &::after {\a 92  \2502  \2502                  content:'';\a 93  \2502  \2502                  height:2px;\a 94  \2502  \2502                  width:5%;\a 95  \2502  \2502              }\a 96  \2502  \2502          }\a 97  \2502  \2502      }\a 98  \2502  \2502      .propiedad {\a 99  \2502  \2502          margin-bottom:em(30px);\a 100 \2502  \2502          height:em(160px);\a 101 \2502  \2502      }\a 102 \2502  \2502      .tasaciones {\a 103 \2502  \2502          &__titulo {\a 104 \2502  \2502              font-size: em(20px);\a 105 \2502  \2502          }\a 106 \2502  \2502          &__cta {\a 107 \2502  \2502              font-size: em(16px);\a 108 \2502  \2502          }\a 109 \2502  \2502      }\a 110 \2502  \2502      .links {\a 111 \2502  \2502          display:flex;\a 112 \2502  \2502          border-right: 1px solid #888;\a 113 \2502  \2502          border-left: 1px solid #888;\a 114 \2502  \2502          margin-right: em(50px);\a 115 \2502  \2502          padding-left: em(50px);\a 116 \2502  \2502      }\a 117 \2502  \2502      .contacto {\a 118 \2502  \2502          padding-left:0;\a 119 \2502  \2502          padding-right:0;\a 120 \2502  \2502      }\a 121 \2502  \2502      .propiedad-reciente {\a 122 \2502  \2502          &__contenido {\a 123 \2502  \2502              font-size: 0.95em;\a 124 \2502  \2502          }\a 125 \2502  \2502      }\a 126 \2502  \2514  }\a     \2575 \a   sass/partials/laptop.scss 1:1  root stylesheet";
 }
