--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -2,10 +2,19 @@
 // Cambiar icono baños
 
 
-
 body {
+    display:flex;
+    flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     background:$blanco;
+}
+body,html {
+    width: 100%;
+    height: 100%;
+}
+
+.contenido-main {
+    flex-grow:2;
 }
 
 .container {
@@ -143,8 +152,6 @@ body {
 
 
 .banner {
-    margin-top:80px;
-
     background: rgba(0,0,0,1);
     box-sizing: border-box;
     &__imagen {
