--- a/style.css
+++ b/style.css
@@ -79,8 +79,19 @@ button, input[type=submit], input[type=reset] {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: "Montserrat", sans-serif;
   background: whitesmoke;
+}
+
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
+.contenido-main {
+  flex-grow: 2;
 }
 
 .container {
@@ -202,7 +213,6 @@ body {
 }
 
 .banner {
-  margin-top: 80px;
   background: black;
   box-sizing: border-box;
 }
@@ -903,7 +913,6 @@ body {
   }
 
   .banner {
-    margin-top: 0;
     height: 100vh;
   }
   .banner__info {
