--- a/sass/partials/main.scss
+++ b/sass/partials/main.scss
@@ -1,21 +1,13 @@
 //@todo
 // Cambiar icono baños
+// agregar 'social' al footer
 
 
 body {
-    display:flex;
-    flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     background:$blanco;
 }
-body,html {
-    width: 100%;
-    height: 100%;
-}
 
-.contenido-main {
-    flex-grow:2;
-}
 
 .container {
     // Espacio de dos lados del contenedor
@@ -217,7 +209,6 @@ body,html {
 
 .buscador {
     background: $blanco-oscuro;
-    height:100%;
     display:flex;
     flex-direction: column;
     -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.16);
@@ -387,7 +378,7 @@ body,html {
     &__caracteristicas {
         display:flex;
         flex-wrap: wrap;
-        align-self: center;
+        align-self: flex-start;
     }
     &__dato {
         flex-basis:48%;
