--- a/sass/partials/tablet.scss
+++ b/sass/partials/tablet.scss
@@ -67,6 +67,36 @@
     .propiedad {
         flex-basis:49%;
     }
+    .pag-inmuebles {
+        flex-direction:row;
+        position:relative;
+    }
+    .inmuebles{
+        flex-basis:61%;
+        &__titulo {
+            width:100%;
+        }
+        &__icono {
+            width:em(40px);
+        }
+        &__top-bar {
+            margin-bottom: em(20px);
+        }
+    }
+    .buscador-aside {
+        position:sticky;
+        top:135px;
+        left:0;
+        margin-top:0;
+        margin: 0 0 em(34px) em(15px);
+        border-radius: 0 7px 7px 0;
+        flex-shrink: 1;
+        height:100%;
+        &__formulario {
+            font-size: 0.9em;
+        }
+
+    }
     .tasaciones {
         height: em(65px);
         display:flex;
